Moved curves for different implementations to one chart. Added testing some options.